Fixing hidden icons on mobile view

--- a/app/less/responsive.less
+++ b/app/less/responsive.less
@@ -2317,10 +2317,6 @@
 	h5 {
 		margin: 10px 0 0 0;
 	}
-	&:before,
-	&:after {
-		display: none;
-	}
 
 	.testimonials-grid {
 		li {
